Hide Editor Bar

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 
 <html lang="en">
 <head>
+    <style>
+        #__framer-editorbar {
+          display: none !important;
+        }
+        .editorbar {
+          display: none !important;
+        }
+      </style>
     <meta charset="utf-8">
     
     
