--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         }
         .editorbar {
           display: none !important;
+            opacity: 0 !important;
         }
       </style>
     <meta charset="utf-8">
